# linguee_api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  fly.toml  pyproject.toml
src/linguee_api/: cache.py  cli.py  client.py  config.py  languages.py  logging.py  main.py  models.py  parser.py
src/linguee_api/tui/: app.py  persistence.py  store.py
