[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linguee-api"
version = "2.0.0"
description = "Unofficial JSON API proxy for Linguee"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "selectolax>=0.3",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "structlog>=24.4",
    "redis[hiredis]>=5.2",
    "slowapi>=0.1.9",
    "tenacity>=9.0",
]

[project.optional-dependencies]
sentry = ["sentry-sdk[fastapi]>=2.19"]
dev = ["ruff>=0.8"]

[tool.hatch.build.targets.wheel]
packages = ["src/linguee_api"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
